tests/deploy_errors/connector_no_kind/error.txt
Error: 
    1 | define flow error
    2 | flow
    3 |   define connector empty;
      |                         ^ Found the token `;` but expected `from`
    4 | end;
